RESOLVED FIXED197867
Followup to r245267: fix some more deprecated uses of -[UIApplication interfaceOrientation]
https://bugs.webkit.org/show_bug.cgi?id=197867
Summary Followup to r245267: fix some more deprecated uses of -[UIApplication interfa...
Wenson Hsieh
Reported 2019-05-13 19:40:59 PDT
Attachments
Patch (7.59 KB, patch)
2019-05-13 19:46 PDT, Wenson Hsieh
no flags
Patch (7.57 KB, patch)
2019-05-13 20:01 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-05-13 19:46:27 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-05-13 20:01:11 PDT
WebKit Commit Bot
Comment 3 2019-05-13 21:15:05 PDT
Comment on attachment 369815 [details] Patch Clearing flags on attachment: 369815 Committed r245272: <https://trac.webkit.org/changeset/245272>
WebKit Commit Bot
Comment 4 2019-05-13 21:15:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.